Fixed labs image alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,7 +271,7 @@ h3 {
 .beer-card__image,
 .beer-showcase__image {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
